objects/Case.object
<CustomObject>
    <fields>
        <fullName>Planned_Return_Date__c</fullName>
        <description>Date the return is planned for</description>
        <label>Planned Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plant_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Plant Manager from the associated Plant</description>
        <label>Plant Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Product_Liability__c</fullName>
        <description>Is this service request likely to become a liability case</description>
        <label>Potential Product Liability?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procedure_or_Process_Changes_to_Prevent__c</fullName>
        <description>Procedure or Process Changes to Prevent</description>
        <label>Procedure or Process Changes to Prevent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Owner</description>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the product been returned? If so, a process builder will update all related Service Request Products to have the &quot;Product Returned&quot; field marked as true</description>
        <label>All Products Returned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purina_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purina Salesperson this case relates to</description>
        <label>Purina Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Purina_Salesperson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quality Manager of the associated Plant</description>
        <label>Quality Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <summarizedField>Service_Request_Product__c.Quantity__c</summarizedField>
        <summaryForeignKey>Service_Request_Product__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RGA_Notes__c</fullName>
        <description>Notes for the RGA</description>
        <label>RGA Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Re_Billing_Type__c</fullName>
        <description>Type of re-billing issued</description>
        <label>Re-Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>S6</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>SX</fullName>
                </value>
                <value>
                    <fullName>SZ</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Billing__c</fullName>
        <description>Number used to reference the re-billing of a service request</description>
        <label>Re-Billing Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_First_Notice__c</fullName>
        <description>Date for 7 day reminder to be sent when waiting for customer response</description>
        <label>Consumer Reminder First Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Second_Notice__c</fullName>
        <description>Second reminder set for 2 business days after first minus 1 day</description>
        <formula>DATETIMEVALUE( Reminder_First_Notice__c  + 
CASE( 
MOD(  Reminder_First_Notice__c  - DATE( 1900, 1, 7 ), 7 ), 
4, 3, 
5, 3, 
6, 2, 
1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumer Reminder Second Notice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user object.</description>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Approved__c</fullName>
        <label>Return Approved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Method__c</fullName>
        <description>What the return method is for the returned products</description>
        <label>Return Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purina arrange and pay for freight</fullName>
                </value>
                <value>
                    <fullName>Purina arrange freight and charge customer</fullName>
                </value>
                <value>
                    <fullName>Customer arrange and pay for freight</fullName>
                </value>
                <value>
                    <fullName>Customer return product and receive freight charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <description>Reason for Return</description>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purina Error</fullName>
                </value>
                <value>
                    <fullName>Customer Error</fullName>
                </value>
                <value>
                    <fullName>Quality Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has a return been requested by Customer</description>
        <label>Return Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Sub_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formula not switched to cold weather formula</fullName>
                </value>
                <value>
                    <fullName>Too much fat, oil, or molasses</fullName>
                </value>
                <value>
                    <fullName>Plant equipment</fullName>
                </value>
                <value>
                    <fullName>Age of pellet die</fullName>
                </value>
                <value>
                    <fullName>Type of ingredient in formula</fullName>
                </value>
                <value>
                    <fullName>Equipment not set up correctly</fullName>
                </value>
                <value>
                    <fullName>Equipment failure</fullName>
                </value>
                <value>
                    <fullName>Plant</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Distribution Center</fullName>
                </value>
                <value>
                    <fullName>Transportation equipment</fullName>
                </value>
                <value>
                    <fullName>Incorrect Ingredient</fullName>
                </value>
                <value>
                    <fullName>Different Plant supplied feed</fullName>
                </value>
                <value>
                    <fullName>No final screening</fullName>
                </value>
                <value>
                    <fullName>Aged molasses</fullName>
                </value>
                <value>
                    <fullName>Start of mold development</fullName>
                </value>
                <value>
                    <fullName>Storage conditions of feed</fullName>
                </value>
                <value>
                    <fullName>Age of feed</fullName>
                </value>
                <value>
                    <fullName>Too much mold inhibitor</fullName>
                </value>
                <value>
                    <fullName>Higher than expected moisture in product</fullName>
                </value>
                <value>
                    <fullName>Feed not cooled correctly after pelleting</fullName>
                </value>
                <value>
                    <fullName>Mold inhibitor not applied or incorrectly applied</fullName>
                </value>
                <value>
                    <fullName>Age of fat or oil in product</fullName>
                </value>
                <value>
                    <fullName>Age of product</fullName>
                </value>
                <value>
                    <fullName>Rancid ingredient</fullName>
                </value>
                <value>
                    <fullName>Storage of product</fullName>
                </value>
                <value>
                    <fullName>Pellet mill start or stop</fullName>
                </value>
                <value>
                    <fullName>Pellet mill too hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <description>Requestor&apos;s Sales Division from the user record.</description>
        <formula>Text(Requestor__r.Sales_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <label>Sales Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>Requestor&apos;s sales region.</description>
        <formula>text(Requestor__r.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_com_Support__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Salesforce.com Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>Date items shipped</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_ID__c</fullName>
        <description>Shipment ID for the Service Request</description>
        <label>Shipment ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Plant_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shipping Plant product originated from</description>
        <label>Shipping Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Branch__c.Customer_Ops_Plant_Type__c</field>
                <operation>equals</operation>
                <value>Shipping, Both, Co-Man, 3PL, Out of Scope</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Service Request</relationshipLabel>
        <relationshipName>Cases_Shipping_Plant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Plant_Unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Plant Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Plant__c</fullName>
        <description>Shipping Plant product originated from</description>
        <label>Shipping Plant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABERDEEN WHSE</fullName>
                </value>
                <value>
                    <fullName>ARCOLA</fullName>
                </value>
                <value>
                    <fullName>ARTESIA</fullName>
                </value>
                <value>
                    <fullName>BLACK RIVER FALLS-ANIMAL MILK</fullName>
                </value>
                <value>
                    <fullName>BROWERVILLE</fullName>
                </value>
                <value>
                    <fullName>CALEDONIA</fullName>
                </value>
                <value>
                    <fullName>CLARENCE</fullName>
                </value>
                <value>
                    <fullName>COLUMBUS WI GEN CLOSED</fullName>
                </value>
                <value>
                    <fullName>COMMERCE CITY</fullName>
                </value>
                <value>
                    <fullName>DAKOTALAND</fullName>
                </value>
                <value>
                    <fullName>DENVER</fullName>
                </value>
                <value>
                    <fullName>DETROIT LAKES</fullName>
                </value>
                <value>
                    <fullName>ELI WHITNEY WAREHOUSE</fullName>
                </value>
                <value>
                    <fullName>EVANSVILLE</fullName>
                </value>
                <value>
                    <fullName>FOND DU LAC</fullName>
                </value>
                <value>
                    <fullName>FORT WORTH</fullName>
                </value>
                <value>
                    <fullName>FRANKFORT</fullName>
                </value>
                <value>
                    <fullName>FREMONT</fullName>
                </value>
                <value>
                    <fullName>FREMONT TUB</fullName>
                </value>
                <value>
                    <fullName>GAINESVILLE</fullName>
                </value>
                <value>
                    <fullName>GLOBAL HARVEST AKRON CO</fullName>
                </value>
                <value>
                    <fullName>GONZALES</fullName>
                </value>
                <value>
                    <fullName>GOTHENBURG</fullName>
                </value>
                <value>
                    <fullName>GRANGER</fullName>
                </value>
                <value>
                    <fullName>GUILDERLAND</fullName>
                </value>
                <value>
                    <fullName>HAGERSTOWN</fullName>
                </value>
                <value>
                    <fullName>HARRISBURG</fullName>
                </value>
                <value>
                    <fullName>HEREFORD</fullName>
                </value>
                <value>
                    <fullName>HILLSBORO</fullName>
                </value>
                <value>
                    <fullName>IGH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Details__c</fullName>
        <description>Solution Details</description>
        <label>Solution Details</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Special_List_View_Formula__c</fullName>
        <description>Determines if the Created By user is the person that is viewing the service request.</description>
        <formula>IF( CreatedById = $User.Id,1,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special List View Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specie_Affected__c</fullName>
        <description>Specie that is affected by Purina product</description>
        <label>Specie Affected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Deer/Elk</fullName>
                </value>
                <value>
                    <fullName>Duck</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Game Bird</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Lab Animal</fullName>
                </value>
                <value>
                    <fullName>Llama/Alpaca</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Poultry - Commercial</fullName>
                </value>
                <value>
                    <fullName>Poultry - Farm Flock</fullName>
                </value>
                <value>
                    <fullName>Primate, Lab</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Ratite</fullName>
                </value>
                <value>
                    <fullName>Sheep/Lamb</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Tractor</fullName>
                </value>
                <value>
                    <fullName>Wild Bird</fullName>
                </value>
                <value>
                    <fullName>Zoo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specie_Focus__c</fullName>
        <label>Specie Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Companion</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
                <value>
                    <fullName>Exotics</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Pet</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sr_Transportation_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sr. Transportation Manager of the Plant</description>
        <label>Sr. Transportation Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Sr. Transportation Manager)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who the initial request was submitted by</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5v1p</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <description>The type of support requested.</description>
        <label>Support Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Data Visibility</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Break/Fix</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_Tub_Hub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Tub Hub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific Time</fullName>
                </value>
                <value>
                    <fullName>Mountain Time</fullName>
                </value>
                <value>
                    <fullName>Central Time</fullName>
                </value>
                <value>
                    <fullName>Eastern Time</fullName>
                </value>
                <value>
                    <fullName>Hawaii Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Weight__c</fullName>
        <description>Field to capture the sum of all related service request product&apos;s total weight</description>
        <label>Total Weight</label>
        <summarizedField>Service_Request_Product__c.Total_Weight__c</summarizedField>
        <summaryForeignKey>Service_Request_Product__c.Service_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transportation_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Transportation Director of the Plant</description>
        <label>Transportation Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Transportation Director)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Compliance_Charge__c</fullName>
        <description>Charge from vendor</description>
        <label>Vendor Compliance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Veterinarian_Email__c</fullName>
        <description>Email address of the Veterinarian for the Specie Affected</description>
        <formula>CASE(Specie_Affected__c, 
&quot;Beef&quot;,  $Setup.Purina_Species__c.Beef_Veterinarian_Email__c  , 
&quot;Dairy&quot;,  $Setup.Purina_Species__c.Dairy_Veterinarian_Email__c , 
&quot;Deer/Elk&quot;,  $Setup.Purina_Species__c.Deer_Elk_Veterinarian_Email__c , 
&quot;Duck&quot;, $Setup.Purina_Species__c.Duck_Veterinarian_Email__c, 
&quot;Fish&quot;, $Setup.Purina_Species__c.Fish_Veterinarian_Email__c, 
&quot;Game Bird&quot;, $Setup.Purina_Species__c.Game_Bird_Veterinarian_Email__c, 
&quot;Goat&quot;, $Setup.Purina_Species__c.Goat_Veterinarian_Email__c, 
&quot;Horse&quot;, $Setup.Purina_Species__c.Horse_Veterinarian_Email__c, 
&quot;Lab Animal&quot;, $Setup.Purina_Species__c.Lab_Animal_Veterinarian_Email__c, 
&quot;Llama/Alpaca&quot;, $Setup.Purina_Species__c.Llama_Alpaca_Veterinarian_Email__c, 
&quot;Mazuri Diets&quot;, $Setup.Purina_Species__c.Mazuri_Diets_Veterinarian_Email__c, 
&quot;Other Companion&quot;, $Setup.Purina_Species__c.Other_Companion_Veterinarian_Email__c, 
&quot;Pet&quot;, $Setup.Purina_Species__c.Pet_Veterinarian_Email__c, 
&quot;Poultry - Commercial&quot;,  $Setup.Purina_Species__c.Poultry_Commerical_Veterinarian_Email__c , 
&quot;Poultry - Farm Flock&quot;, $Setup.Purina_Species__c.Poultry_Farm_Flock_Veterinarian_Email__c, 
&quot;Primate Lab&quot;, $Setup.Purina_Species__c.Primate_Lab_Veterinarian_Email__c, 
&quot;Rabbit&quot;, 
$Setup.Purina_Species__c.Rabbit_Veterinarian_Email__c, 
&quot;Ratite&quot;, $Setup.Purina_Species__c.Ratite_Veterinarian_Email__c, 
&quot;Sheep/Lamb&quot;, $Setup.Purina_Species__c.Sheep_Lamb_Veterinarian_Email__c, 
&quot;Show Feeds&quot;, $Setup.Purina_Species__c.Show_Veterinarian_Email__c, 
&quot;Swine&quot;, $Setup.Purina_Species__c.Swine_Veterinarian_Email__c, 
&quot;Wild Bird&quot;, $Setup.Purina_Species__c.Wild_Bird_Veterinarian_Email__c, 
&quot;Zoo&quot;, $Setup.Purina_Species__c.Zoo_Veterinarian_Email__c, 
&quot;Other&quot;, NULL, 
NULL)</formula>
        <label>Veterinarian Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veterinarian_Phone__c</fullName>
        <description>Phone number of the Veterinarian for the Specie Affected</description>
        <formula>CASE(Specie_Affected__c, 
&quot;Beef&quot;,  $Setup.Purina_Species__c.Beef_Veterinarian_Phone__c , 
&quot;Dairy&quot;, $Setup.Purina_Species__c.Dairy_Veterinarian_Phone__c , 
&quot;Deer/Elk&quot;,  $Setup.Purina_Species__c.Deer_Veterinarian_Phone__c  , 
&quot;Duck&quot;, $Setup.Purina_Species__c.Duck_Veterinarian_Phone__c, 
&quot;Fish&quot;, $Setup.Purina_Species__c.Fish_Veterinarian_Phone__c, 
&quot;Game Bird&quot;, $Setup.Purina_Species__c.Game_Bird_Veterinarian_Phone__c, 
&quot;Goat&quot;, $Setup.Purina_Species__c.Goat_Veterinarian_Phone__c, 
&quot;Horse&quot;, $Setup.Purina_Species__c.Horse_Veterinarian_Phone__c, 
&quot;Lab Animal&quot;, $Setup.Purina_Species__c.Lab_Animal_Veterinarian_Phone__c, 
&quot;Llama/Alpaca&quot;, $Setup.Purina_Species__c.Llama_Alpaca_Veterinarian_Phone__c, 
&quot;Mazuri Diets&quot;, $Setup.Purina_Species__c.Mazuri_Diets_Veterinarian_Phone__c, 
&quot;Other Companion&quot;, $Setup.Purina_Species__c.Other_Companion_Veterinarian_Phone__c, 
&quot;Pet&quot;, $Setup.Purina_Species__c.Pet_Veterinarian_Phone__c, 
&quot;Poultry - Commercial&quot;, $Setup.Purina_Species__c.Poultry_Commerical_Veterinarian_Phone__c , 
&quot;Poultry - Farm Flock&quot;, $Setup.Purina_Species__c.Poultry_Farm_Flock_Veterinarian_Phone__c, 
&quot;Primate Lab&quot;, $Setup.Purina_Species__c.Primate_Lab_Veterinarian_Phone__c, 
&quot;Rabbit&quot;, $Setup.Purina_Species__c.Rabbit_Veterinarian_Phone__c, 
&quot;Ratite&quot;, $Setup.Purina_Species__c.Ratite_Veterinarian_Phone__c, 
&quot;Sheep/Lamb&quot;, $Setup.Purina_Species__c.Sheep_Lamb_Veterinarian_Phone__c, 
&quot;Show Feeds&quot;, $Setup.Purina_Species__c.Show_Veterinarian_Phone__c, 
&quot;Swine&quot;, $Setup.Purina_Species__c.Swine_Veterinarian_Phone__c, 
&quot;Wild Bird&quot;, $Setup.Purina_Species__c.Wild_Bird_Veterinarian_Phone__c, 
&quot;Zoo&quot;, $Setup.Purina_Species__c.Zoo_Veterinarian_Phone__c, 
&quot;Other&quot;, NULL, 
NULL)</formula>
        <label>Veterinarian Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veterinarian__c</fullName>
        <description>Veterinarian for the Specie selected</description>
        <formula>CASE(Specie_Affected__c, 
&quot;Beef&quot;,  $Setup.Purina_Species__c.Beef_Veternarian__c , 
&quot;Dairy&quot;, $Setup.Purina_Species__c.Dairy_Veternarian__c, 
&quot;Deer/Elk&quot;, $Setup.Purina_Species__c.Deer_Elk_Veternarian__c, 
&quot;Duck&quot;, $Setup.Purina_Species__c.Duck_Veternarian__c, 
&quot;Fish&quot;, $Setup.Purina_Species__c.Fish_Veternarian__c, 
&quot;Game Bird&quot;, $Setup.Purina_Species__c.Game_Bird_Veternarian__c, 
&quot;Goat&quot;, $Setup.Purina_Species__c.Goat_Veternarian__c, 
&quot;Horse&quot;, $Setup.Purina_Species__c.Horse_Veternarian__c, 
&quot;Lab Animal&quot;, $Setup.Purina_Species__c.Lab_Animal_Veternarian__c, 
&quot;Llama/Alpaca&quot;, $Setup.Purina_Species__c.Llama_Alpaca_Veternarian__c, 
&quot;Mazuri Diets&quot;, $Setup.Purina_Species__c.Mazuri_Diets_Veternarian__c, 
&quot;Other Companion&quot;, $Setup.Purina_Species__c.Other_Companion_Veternarian__c, 
&quot;Pet&quot;, $Setup.Purina_Species__c.Pet_Veternarian__c, 
&quot;Poultry - Commercial&quot;, $Setup.Purina_Species__c.Poultry_Commercial_Veternarian__c, 
&quot;Poultry - Farm Flock&quot;, $Setup.Purina_Species__c.Poultry_Farm_Flock_Veternarian__c, 
&quot;Primate Lab&quot;, $Setup.Purina_Species__c.Primate_Lab_Veternarian__c, 
&quot;Rabbit&quot;, 
$Setup.Purina_Species__c.Rabbit_Veternarian__c, 
&quot;Ratite&quot;, $Setup.Purina_Species__c.Ratite_Veternarian__c, 
&quot;Sheep/Lamb&quot;, $Setup.Purina_Species__c.Sheep_Lamb_Veternarian__c, 
&quot;Show Feeds&quot;, $Setup.Purina_Species__c.Show_Veternarian__c, 
&quot;Swine&quot;, $Setup.Purina_Species__c.Swine_Veternarian__c, 
&quot;Wild Bird&quot;, $Setup.Purina_Species__c.Wild_Bird_Veternarian__c, 
&quot;Zoo&quot;, $Setup.Purina_Species__c.Zoo_Veternarian__c, 
&quot;Other&quot;, NULL, 
NULL)</formula>
        <label>Veterinarian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Warehouse Manager from the associated Plant</description>
        <label>Warehouse Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebEx_Training_Date__c</fullName>
        <label>WebEx Training Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>March 30, 2016       ||  8:30 AM  CST</fullName>
                </value>
                <value>
                    <fullName>Aug 17th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Aug 22nd, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Aug 24th, 2017 || 2:00 PM CST</fullName>
                </value>
                <value>
                    <fullName>Aug 31st, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Sept 12th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Sept 14th, 2017 || 2:00 PM CST</fullName>
                </value>
                <value>
                    <fullName>Sept 26th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Sept 28th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Oct 10th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Oct 12th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Oct 24th, 2017 || 8:00 AM CST</fullName>
                </value>
                <value>
                    <fullName>Oct 26th, 2017 || 2:00 PM CST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Case_ID__c</fullName>
        <formula>casesafeid( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFirstSRProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>marks if a SR Product has already been added to the SR</description>
        <label>isFirstSRProduct</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>